--- a/LapTrinhQuanLy/Views/Account/Login.cshtml
+++ b/LapTrinhQuanLy/Views/Account/Login.cshtml
@@ -7,7 +7,6 @@
 
 <h2>Login</h2>
 
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -32,6 +31,8 @@
             </div>
         </div>
 
+        
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -40,7 +41,6 @@
     </div>
 }
 
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
